# robot_trajectory_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  build.sh  compose.yaml  devcontainer.json  setup.sh
include/: controller_nlp.hpp  diff_drive_dynamics.hpp  pendulum.hpp  robot_dynamics.hpp  robot_state_plotter.hpp  robot_tnlp.hpp
mpc_robot_controller/: CMakeLists.txt  package.xml  robot_controller.xml  ros_deps.repos
mpc_robot_controller/include/mpc_robot_controller/: controller_nlp.hpp  diff_drive_dynamics.hpp  mpc_robot_controller.hpp  receding_horizon_controller.hpp  robot_dynamics.hpp  utils.hpp
mpc_robot_controller/include/robot_controller/: diff_drive_dynamics.hpp  robot_dynamics.hpp  robot_state_plotter.hpp
mpc_robot_controller/src/: main.cpp  mpc_robot_controller.cpp  receding_horizon_controller.cpp
rosbot_2r_demo/: CMakeLists.txt  package.xml  ros_deps.repos
rosbot_2r_demo/config/: nav2_params.yaml
rosbot_2r_demo/launch/: bringup.launch.py  nav2.launch.py
rosbot_2r_demo/maps/: map.yaml
rosbot_2r_demo/rviz/: config.rviz
src/: MyNLP.cpp  main.cpp  pendulum.cpp  robot_dynamics.cpp  robot_tnlp.cpp
