<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_2r_demo</name>
  <version>0.0.0</version>
  <description>MPC based controller</description>
  <maintainer email="krzy.wojciecho@gmail.com">Shrijit Singh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mpc_robot_controller</exec_depend>
  <exec_depend>rosbot_controller</exec_depend>
  <exec_depend>rosbot_gazebo</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
